add: add the logic of working with the database,  need to fix the sand History method and insert it into the database